fix overflow errors in IE7
pesky bug of relative content in non-relative container not respecting overflow:hidden

--- a/style/colors.css
+++ b/style/colors.css
@@ -119,7 +119,7 @@ span.unread {
 }
 
 #page-content-wrapper {
-    background-color: [[setting:linkcolor]];
+    background-color: [[setting:contentbgcolor]];
 }
 
 .pagelayout-report #page-content {
