--- a/style/pagelayout.css
+++ b/style/pagelayout.css
@@ -24,13 +24,14 @@
 /* All Views */
 
 body {
-	padding: 0 10px 10px 10px;
+    padding: 0 10px 10px 10px;
 }
 
 #page {
-	margin: 0 auto;
-	max-width: [[setting:pagemaxwidth]];
-	overflow: hidden;
+    margin: 0 auto;
+    max-width: [[setting:pagemaxwidth]];
+    overflow: hidden;
+    position: relative;
 }
 
 #page-header,
@@ -40,35 +41,35 @@ body {
 #page-footer,
 #region-main-box,
 #region-post-box {
-	clear: both;
-	float: none;
-	position: relative;
-	width: 100%;
+    clear: both;
+    float: none;
+    position: relative;
+    width: 100%;
 }
 
 #region-main,
 #region-pre,
 #region-post {
-	position: relative;
+    position: relative;
 }
 
 .side-pre-only #region-post,
 .side-post-only #region-pre,
 .content-only #region-pre,
 .content-only #region-post {
-	width: 0;
-	height: 0;
-	visibility: hidden;
+    width: 0;
+    height: 0;
+    visibility: hidden;
     display: none;
 }
 
 .content-only #region-main {
-	margin-left: 0;
-	margin-right: 0;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 .region-content {
-	padding: 4px 4px 0 4px;
+    padding: 4px 4px 0 4px;
 }
 
 #region-main .region-content {
@@ -157,7 +158,7 @@ body {
     .side-pre-only #region-post-box {
         margin-left: -[[setting:colwidth]]px;
     }
-    
+
     .side-pre-only #region-main {
         margin-left: [[setting:colwidth]]px;
     }
